--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/swagger": "^11.2.0",
     "@prisma/client": "^6.7.0",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -36,6 +37,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "swagger-ui-express": "^5.0.1",
     "tedious": "^18.6.1",
     "winston": "^3.17.0"
   },
